--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" >
-  <head>
-    <meta charset="utf-8">
-  
-    <title> css project</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="header">
-      <h1>CSS is a lot if Fun</h1>
-    </div>
-    <div class="main">
-      <section>
-        <h3>Section One Title</h3>
-      </section>
-      <img src="test2.png" alt="not supported by your browser">
-<p>Lorem ipsum <span>dolor sit amet,</span> consectetur adipisicing elit,
- <b>quis nostrud exercitation</b> ullamco laboris nisi ut aliq.</p>
+<html lang="en">
 
-    </div>
+<head>
+  <meta charset="utf-8">
 
-<div class="below">
-  <h3>Section Two Title</h3><br>
-   <p>Excepteur sint occaecat cupidatat non proident, sunt
-   in culpa qui officia deserunt mollit anim id est laborum.</p>
-   <p>Excepteur sint occaecat <span>cupidatat non proident</span>, sunt
-   in culpa qui officia deserunt mollit anim id est laborum.
- </p><br>
- <button class="contactbtn" type="button" name="button">Contact Us</button>
- <button class="infobtn" type="button" name="button">More info</button>
-</div>
-  </body>
+  <title> css project</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="header">
+    <h1>CSS is a lot if Fun</h1>
+  </div>
+  <div class="main">
+    <section>
+      <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" title="Explanation of WCAG 2 Level AA conformance">
+        <img height="32" width="88" src="https://www.w3.org/WAI/WCAG21/wcag2.1AA-v" alt="Level AA conformance,
+            W3C WAI Web Content Accessibility Guidelines 2.1">
+      </a>
+      <h3>Section One Title</h3>
+    </section>
+    <img src="test2.png" alt="not supported by your browser">
+    <p>Lorem ipsum <span>dolor sit amet,</span> consectetur adipisicing elit,
+      <b>quis nostrud exercitation</b> ullamco laboris nisi ut aliq.
+    </p>
+
+  </div>
+
+  <div class="below">
+    <h3>Section Two Title</h3><br>
+    <p>Excepteur sint occaecat cupidatat non proident, sunt
+      in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Excepteur sint occaecat <span>cupidatat non proident</span>, sunt
+      in culpa qui officia deserunt mollit anim id est laborum.
+    </p><br>
+    <button class="contactbtn" type="button" name="button">Contact Us</button>
+    <button class="infobtn" type="button" name="button">More info</button>
+  </div>
+</body>
+
 </html>
